src/test/deca/context/invalid/protected-classNotSubTypeOfField.context
protected-classNotSubTypeOfField.deca:4:
